lab7/syntax.output
Grammar

    0 $accept: Json $end

    1 Json: %empty
    2     | Value
    3     | Value COMMA error

    4 Value: Object
    5      | Array
    6      | STRING
    7      | NUMBER
    8      | ERROR_NUMBER error
    9      | TRUE
   10      | FALSE
   11      | VNULL

   12 Object: LC RC
   13       | LC Members RC
   14       | LC Members RC Value error
   15       | LC Members COMMA error

   16 Members: Member
   17        | Member COMMA Members
   18        | Member COMMA error

   19 Member: STRING COLON Value
   20       | STRING Value error
   21       | STRING COMMA Value error
   22       | STRING COLON COLON Value error

   23 Array: LB RB
   24      | LB Values RB
   25      | LB Values error
   26      | LB Values RC error

   27 Values: Value
   28       | Value COMMA Values
   29       | Value COMMA error
   30       | Value COMMA COMMA error
   31       | Value COLON Values error
   32       | COMMA Values error


Terminals, with rules where they appear

$end (0) 0
error (256) 3 8 14 15 18 20 21 22 25 26 29 30 31 32
NUMBER (258) 7
STRING (259) 6 19 20 21 22
TRUE (260) 9
FALSE (261) 10
VNULL (262) 11
LC (263) 12 13 14 15
RC (264) 12 13 14 26
LB (265) 23 24 25 26
RB (266) 23 24
COLON (267) 19 22 31
ERROR_NUMBER (268) 8
LOWER_COMMA (269)
COMMA (270) 3 15 17 18 21 28 29 30 32


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
Json (17)
    on left: 1 2 3, on right: 0
Value (18)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3 14 19 20 21 22 27 28
    29 30 31
Object (19)
    on left: 12 13 14 15, on right: 4
Members (20)
    on left: 16 17 18, on right: 13 14 15 17
Member (21)
    on left: 19 20 21 22, on right: 16 17 18
Array (22)
    on left: 23 24 25 26, on right: 5
Values (23)
    on left: 27 28 29 30 31 32, on right: 24 25 26 28 31 32


State 0

    0 $accept: . Json $end

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8

    $default  reduce using rule 1 (Json)

    Json    go to state 9
    Value   go to state 10
    Object  go to state 11
    Array   go to state 12


State 1

    7 Value: NUMBER .

    $default  reduce using rule 7 (Value)


State 2

    6 Value: STRING .

    $default  reduce using rule 6 (Value)


State 3

    9 Value: TRUE .

    $default  reduce using rule 9 (Value)


State 4

   10 Value: FALSE .

    $default  reduce using rule 10 (Value)


State 5

   11 Value: VNULL .

    $default  reduce using rule 11 (Value)


State 6

   12 Object: LC . RC
   13       | LC . Members RC
   14       | LC . Members RC Value error
   15       | LC . Members COMMA error

    STRING  shift, and go to state 13
    RC      shift, and go to state 14

    Members  go to state 15
    Member   go to state 16


State 7

   23 Array: LB . RB
   24      | LB . Values RB
   25      | LB . Values error
   26      | LB . Values RC error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    RB            shift, and go to state 17
    ERROR_NUMBER  shift, and go to state 8
    COMMA         shift, and go to state 18

    Value   go to state 19
    Object  go to state 11
    Array   go to state 12
    Values  go to state 20


State 8

    8 Value: ERROR_NUMBER . error

    error  shift, and go to state 21


State 9

    0 $accept: Json . $end

    $end  shift, and go to state 22


State 10

    2 Json: Value .
    3     | Value . COMMA error

    COMMA  shift, and go to state 23

    $default  reduce using rule 2 (Json)


State 11

    4 Value: Object .

    $default  reduce using rule 4 (Value)


State 12

    5 Value: Array .

    $default  reduce using rule 5 (Value)


State 13

   19 Member: STRING . COLON Value
   20       | STRING . Value error
   21       | STRING . COMMA Value error
   22       | STRING . COLON COLON Value error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    COLON         shift, and go to state 24
    ERROR_NUMBER  shift, and go to state 8
    COMMA         shift, and go to state 25

    Value   go to state 26
    Object  go to state 11
    Array   go to state 12


State 14

   12 Object: LC RC .

    $default  reduce using rule 12 (Object)


State 15

   13 Object: LC Members . RC
   14       | LC Members . RC Value error
   15       | LC Members . COMMA error

    RC     shift, and go to state 27
    COMMA  shift, and go to state 28


State 16

   16 Members: Member .
   17        | Member . COMMA Members
   18        | Member . COMMA error

    COMMA  shift, and go to state 29

    $default  reduce using rule 16 (Members)


State 17

   23 Array: LB RB .

    $default  reduce using rule 23 (Array)


State 18

   32 Values: COMMA . Values error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8
    COMMA         shift, and go to state 18

    Value   go to state 19
    Object  go to state 11
    Array   go to state 12
    Values  go to state 30


State 19

   27 Values: Value .
   28       | Value . COMMA Values
   29       | Value . COMMA error
   30       | Value . COMMA COMMA error
   31       | Value . COLON Values error

    COLON  shift, and go to state 31
    COMMA  shift, and go to state 32

    $default  reduce using rule 27 (Values)


State 20

   24 Array: LB Values . RB
   25      | LB Values . error
   26      | LB Values . RC error

    error  shift, and go to state 33
    RC     shift, and go to state 34
    RB     shift, and go to state 35


State 21

    8 Value: ERROR_NUMBER error .

    $default  reduce using rule 8 (Value)


State 22

    0 $accept: Json $end .

    $default  accept


State 23

    3 Json: Value COMMA . error

    error  shift, and go to state 36


State 24

   19 Member: STRING COLON . Value
   22       | STRING COLON . COLON Value error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    COLON         shift, and go to state 37
    ERROR_NUMBER  shift, and go to state 8

    Value   go to state 38
    Object  go to state 11
    Array   go to state 12


State 25

   21 Member: STRING COMMA . Value error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8

    Value   go to state 39
    Object  go to state 11
    Array   go to state 12


State 26

   20 Member: STRING Value . error

    error  shift, and go to state 40


State 27

   13 Object: LC Members RC .
   14       | LC Members RC . Value error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8

    $default  reduce using rule 13 (Object)

    Value   go to state 41
    Object  go to state 11
    Array   go to state 12


State 28

   15 Object: LC Members COMMA . error

    error  shift, and go to state 42


State 29

   17 Members: Member COMMA . Members
   18        | Member COMMA . error

    error   shift, and go to state 43
    STRING  shift, and go to state 13

    Members  go to state 44
    Member   go to state 16


State 30

   32 Values: COMMA Values . error

    error  shift, and go to state 45


State 31

   31 Values: Value COLON . Values error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8
    COMMA         shift, and go to state 18

    Value   go to state 19
    Object  go to state 11
    Array   go to state 12
    Values  go to state 46


State 32

   28 Values: Value COMMA . Values
   29       | Value COMMA . error
   30       | Value COMMA . COMMA error

    error         shift, and go to state 47
    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8
    COMMA         shift, and go to state 48

    Value   go to state 19
    Object  go to state 11
    Array   go to state 12
    Values  go to state 49


State 33

   25 Array: LB Values error .

    $default  reduce using rule 25 (Array)


State 34

   26 Array: LB Values RC . error

    error  shift, and go to state 50


State 35

   24 Array: LB Values RB .

    $default  reduce using rule 24 (Array)


State 36

    3 Json: Value COMMA error .

    $default  reduce using rule 3 (Json)


State 37

   22 Member: STRING COLON COLON . Value error

    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8

    Value   go to state 51
    Object  go to state 11
    Array   go to state 12


State 38

   19 Member: STRING COLON Value .

    $default  reduce using rule 19 (Member)


State 39

   21 Member: STRING COMMA Value . error

    error  shift, and go to state 52


State 40

   20 Member: STRING Value error .

    $default  reduce using rule 20 (Member)


State 41

   14 Object: LC Members RC Value . error

    error  shift, and go to state 53


State 42

   15 Object: LC Members COMMA error .

    $default  reduce using rule 15 (Object)


State 43

   18 Members: Member COMMA error .

    $default  reduce using rule 18 (Members)


State 44

   17 Members: Member COMMA Members .

    $default  reduce using rule 17 (Members)


State 45

   32 Values: COMMA Values error .

    $default  reduce using rule 32 (Values)


State 46

   31 Values: Value COLON Values . error

    error  shift, and go to state 54


State 47

   29 Values: Value COMMA error .

    $default  reduce using rule 29 (Values)


State 48

   30 Values: Value COMMA COMMA . error
   32       | COMMA . Values error

    error         shift, and go to state 55
    NUMBER        shift, and go to state 1
    STRING        shift, and go to state 2
    TRUE          shift, and go to state 3
    FALSE         shift, and go to state 4
    VNULL         shift, and go to state 5
    LC            shift, and go to state 6
    LB            shift, and go to state 7
    ERROR_NUMBER  shift, and go to state 8
    COMMA         shift, and go to state 18

    Value   go to state 19
    Object  go to state 11
    Array   go to state 12
    Values  go to state 30


State 49

   28 Values: Value COMMA Values .

    $default  reduce using rule 28 (Values)


State 50

   26 Array: LB Values RC error .

    $default  reduce using rule 26 (Array)


State 51

   22 Member: STRING COLON COLON Value . error

    error  shift, and go to state 56


State 52

   21 Member: STRING COMMA Value error .

    $default  reduce using rule 21 (Member)


State 53

   14 Object: LC Members RC Value error .

    $default  reduce using rule 14 (Object)


State 54

   31 Values: Value COLON Values error .

    $default  reduce using rule 31 (Values)


State 55

   30 Values: Value COMMA COMMA error .

    $default  reduce using rule 30 (Values)


State 56

   22 Member: STRING COLON COLON Value error .

    $default  reduce using rule 22 (Member)
